fix(review): PR #94 리뷰 반영
- Collections.emptyList() → List.of() 스타일 통일 (동현 리뷰)
- getMyParticipatingSpots in-memory 필터 TODO 코멘트 추가 (동현 리뷰)
- cancelSpot/completeSpot 중복 @Transactional 제거 — 클래스 레벨 상속 (CodeRabbit)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>